Fixed scrollbar issue that snuck in

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -26,7 +26,6 @@ a:hover, a:visited, a:focus {
 ================================ */
 body {
   position: relative; 
-  width: 100%;
 }
 
 /* Set margin for all sections except landing
